--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="icono">Icono</string>
     <string name="logo">Logo</string>
     <string name="nickname">Nickname</string>
+    <string name="logeate"><u>Logeate!!</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
