--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="logo">Logo</string>
     <string name="nickname">Nickname</string>
     <string name="logeate"><u>Logeate!!</u></string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="inicio">Inicio</string>
+    <string name="perfil">Perfil</string>
+    <string name="jugar">Jugar</string>
+    <string name="buscar">Buscar</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
