--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="jugar">Jugar</string>
     <string name="buscar">Buscar</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="aniadirAnimales">Añadir animales</string>
+    <string name="tiposAnimales">Seccion de tipos de Animales</string>
+
 </resources>
