Mejora en Fragment Jugar + consulta DB
- Mejorada visualmente del fragment jugar
- Consulta para sacar los jugadores y meterlos en el listview
- Consulta para insertar datos del jugadores a la card
- Pequeña mejora visual en inicio

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="buscar">Buscar</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="aniadirAnimales">Añadir animales</string>
-    <string name="tiposAnimales">Seccion de tipos de Animales</string>
+    <string name="tiposAnimales">Tipos de Animales</string>
     <string name="ayuda">Ayuda</string>
     <string name="irAyuda">Ir a Ayuda</string>
     <string name="textoBuscar">Puedes buscar una ficha o video de un animal</string>
