Creacion de Fragment Perfil y Funcionalidades
- Finalizar Sesion
-Diseño de Fragment Perfil
- Obtener datos del usuario actual para carta editar usuario

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -34,6 +34,9 @@
     <string name="tuNombre">Hola,</string>
     <string name="informacionJuego">Informacion del juego</string>
     <string name="irInformacionJuego">Ir a la información del juego</string>
+    <string name="cambioConstrasenia">Cambiar Contraseña</string>
+    <string name="irContacto">Ir a Contacto!!</string>
+    <string name="finalizarSesion">Finalizar Sesion</string>
 
 
 </resources>
