Creacion de pantalla Loading
- Al iniciar el juego y ya estabas antes logueado iras a la pantalla loading
- Al logearte con email
- Creacion de loading en fragment Perfil

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="cambioConstrasenia">Cambiar Contraseña</string>
     <string name="irContacto">Ir a Contacto!!</string>
     <string name="finalizarSesion">Finalizar Sesion</string>
+    <string name="cargando">Cargando...</string>
 
 
 </resources>
