Cambiar Datos Perfil
- Actividad de cambiar Datos accesible desde el fragment Perfil
-También en dicha actividad se puede borrar el usuario

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="tituloCambiarContrasenia">A continuación puedes cambiar la contraseña</string>
     <string name="nuevaContrasenia">Nueva Contraseña</string>
     <string name="btnCambiar">Cambiar</string>
-
+    <string name="cambiarDatosPerfil">Cambiar Datos del Perfil</string>
+    <string name="eliminarUsuario">Eliminar Usuario</string>
+    <string name="eliminar">Eliminar</string>
 
 </resources>
