Creacion de Peticion de animales
- Ahora los usuarios podran hacer una peticion para insertar animales mediante un formulario
- Diseño de Controlador de Peticiones de Animales

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -47,5 +47,9 @@
     <string name="eliminar">Eliminar</string>
     <string name="video">Video</string>
     <string name="descripcion">Descripcion: </string>
-
+    <string name="aniadir">Añadir!!</string>
+    <string name="tipo">Tipo</string>
+    <string name="urlFoto">URL de la foto</string>
+    <string name="valueVideo">Value del video</string>
+    <string name="controlPeticionesAnimales">Control de Peticiones de Animales</string>
 </resources>
