Implementacion de ficha en Actividad ControlPeticiones
- boton añadido en Fragment inicio para ir a Control
- Mejora diversas en la actividad Ficha ahora se le pasara un bundle para sacar el animal
- Implementacion en el recycler de ControlPeticionAdapter: Ahora cuando pulses en la imagen de una foto de un animal se abrirá la ficha, esto sirve para visualizar

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="urlFoto">URL de la foto</string>
     <string name="valueVideo">Value del video</string>
     <string name="controlPeticionesAnimales">Control de Peticiones de Animales</string>
+    <string name="controlAnimales">Control de Animales (Administradores)</string>
+    <string name="irAControl">ir a Control</string>
 </resources>
