Creacion de SeccionAnimales
- Ahora en el fragment Inicio se puede ver el listado de las diferentes especies de animales

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="controlPeticionesAnimales">Control de Peticiones de Animales</string>
     <string name="controlAnimales">Control de Animales (Administradores)</string>
     <string name="irAControl">ir a Control</string>
+    <string name="txtSeccionAnimales">Seccion de animales de: </string>
 </resources>
