--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="accesoAdministrador">Logueate para poder acceder al controlador de peticiones de animales</string>
     <string name="txtUsuario">Usuario</string>
     <string name="aceptar">Aceptar</string>
+    <string name="vidas">Total de vidas: </string>
 </resources>
