--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="c">C</string>
     <string name="d">D</string>
     <string name="descripcionPregunta">DescPregunta</string>
+    <string name="txtBuscador">Escribe el nombre del animal</string>
 </resources>
