Creacion de Funciones para el juego
Estoy implementando la funcionalidad:
- Al iniciar la actividad borramos la coleccion juego_usuario
- Insertamos en juego_usuario la coleccion de preguntas
- Sacamos una pregunta aleatoria y la sacamos al juego.

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="d">D</string>
     <string name="descripcionPregunta">DescPregunta</string>
     <string name="txtBuscador">Escribe el nombre del animal</string>
+    <string name="idPregunta">ID Pregunta</string>
 </resources>
