Actividad Recuperar Contraseña
- He implementado una funcionalidad ahora si al usuario se le ha olvidado la contraseña la podra resetear enviado un enlace a su correo electronico

--- a/ElMundoAnimal/app/src/main/res/values/strings.xml
+++ b/ElMundoAnimal/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="asunto">Asunto</string>
     <string name="contenido">Contenido</string>
     <string name="campoVacio">Campo Vacio</string>
+    <string name="olvidarContrasenia"><u>Recuperar contraseña</u></string>
+    <string name="txtResetearContrasenia">Escribe a continuacion el correo electronico donde deseas resetar la contraseña</string>
 </resources>
